src/native/libs/Evergreen.Graphics/egImGui.h

typedef int EgImGuiBool;
typedef struct {
	void* internal;
} EgImGuiContext;
typedef struct {
    float x;
    float y;
} EgImGuiVector2;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} EgImGuiVector4;
// This is a 1:1 with ImGuiInputTextFlags.
enum EgImGuiInputTextFlags
{
    EgImGuiInputTextFlags_None = 0,
    EgImGuiInputTextFlags_CharsDecimal = 1 << 0,   // Allow 0123456789.+-*/
    EgImGuiInputTextFlags_CharsHexadecimal = 1 << 1,   // Allow 0123456789ABCDEFabcdef
    EgImGuiInputTextFlags_CharsUppercase = 1 << 2,   // Turn a..z into A..Z
    EgImGuiInputTextFlags_CharsNoBlank = 1 << 3,   // Filter out spaces, tabs
    EgImGuiInputTextFlags_AutoSelectAll = 1 << 4,   // Select entire text when first taking mouse focus
    EgImGuiInputTextFlags_EnterReturnsTrue = 1 << 5,   // Return 'true' when Enter is pressed (as opposed to every time the value was modified). Consider looking at the IsItemDeactivatedAfterEdit() function.
    EgImGuiInputTextFlags_CallbackCompletion = 1 << 6,   // Callback on pressing TAB (for completion handling)
    EgImGuiInputTextFlags_CallbackHistory = 1 << 7,   // Callback on pressing Up/Down arrows (for history handling)
    EgImGuiInputTextFlags_CallbackAlways = 1 << 8,   // Callback on each iteration. User code may query cursor position, modify text buffer.
    EgImGuiInputTextFlags_CallbackCharFilter = 1 << 9,   // Callback on character inputs to replace or discard them. Modify 'EventChar' to replace or discard, or return 1 in callback to discard.
    EgImGuiInputTextFlags_AllowTabInput = 1 << 10,  // Pressing TAB input a '\t' character into the text field
    EgImGuiInputTextFlags_CtrlEnterForNewLine = 1 << 11,  // In multi-line mode, unfocus with Enter, add new line with Ctrl+Enter (default is opposite: unfocus with Ctrl+Enter, add line with Enter).
    EgImGuiInputTextFlags_NoHorizontalScroll = 1 << 12,  // Disable following the cursor horizontally
    EgImGuiInputTextFlags_AlwaysOverwrite = 1 << 13,  // Overwrite mode
    EgImGuiInputTextFlags_ReadOnly = 1 << 14,  // Read-only mode
    EgImGuiInputTextFlags_Password = 1 << 15,  // Password mode, display all characters as '*'
    EgImGuiInputTextFlags_NoUndoRedo = 1 << 16,  // Disable undo/redo. Note that input text owns the text data while active, if you want to provide your own undo/redo stack you need e.g. to call ClearActiveID().
    EgImGuiInputTextFlags_CharsScientific = 1 << 17,  // Allow 0123456789.+-*/eE (Scientific notation input)
    EgImGuiInputTextFlags_CallbackResize = 1 << 18,  // Callback on buffer capacity changes request (beyond 'buf_size' parameter value), allowing the string to grow. Notify when the string wants to be resized (for string types which hold a cache of their Size). You will be provided a new BufSize in the callback and NEED to honor it. (see misc/cpp/imgui_stdlib.h for an example of using this)
    EgImGuiInputTextFlags_CallbackEdit = 1 << 19,  // Callback on any edit (note that InputText() already returns true on edit, the callback is useful mainly to manipulate the underlying buffer while focus is active)
    EgImGuiInputTextFlags_EscapeClearsAll = 1 << 20,  // Escape key clears content if not empty, and deactivate otherwise (contrast to default behavior of Escape to revert)
};
// 1:1 with ImGuiInputTextCallbackData
typedef struct {
    void* Ctx;            // Parent UI context
    EgImGuiInputTextFlags EventFlag;      // One ImGuiInputTextFlags_Callback*    // Read-only
    EgImGuiInputTextFlags Flags;          // What user passed to InputText()      // Read-only
    void* UserData;       // What user passed to InputText()      // Read-only

    // Arguments for the different callback events
    // - To modify the text buffer in a callback, prefer using the InsertChars() / DeleteChars() function. InsertChars() will take care of calling the resize callback if necessary.
    // - If you know your edits are not going to resize the underlying buffer allocation, you may modify the contents of 'Buf[]' directly. You need to update 'BufTextLen' accordingly (0 <= BufTextLen < BufSize) and set 'BufDirty'' to true so InputText can update its internal state.
    unsigned int             EventChar;      // Character input                      // Read-write   // [CharFilter] Replace character with another one, or set to zero to drop. return 1 is equivalent to setting EventChar=0;
    int            EventKey;       // Key pressed (Up/Down/TAB)            // Read-only    // [Completion,History]
    char* Buf;            // Text buffer                          // Read-write   // [Resize] Can replace pointer / [Completion,History,Always] Only write to pointed data, don't replace the actual pointer!
    int                 BufTextLen;     // Text length (in bytes)               // Read-write   // [Resize,Completion,History,Always] Exclude zero-terminator storage. In C land: == strlen(some_text), in C++ land: string.length()
    int                 BufSize;        // Buffer size (in bytes) = capacity+1  // Read-only    // [Resize,Completion,History,Always] Include zero-terminator storage. In C land == ARRAYSIZE(my_char_array), in C++ land: string.capacity()+1
    bool                BufDirty;       // Set if you modify Buf/BufTextLen!    // Write        // [Completion,History,Always]
    int                 CursorPos;      //                                      // Read-write   // [Completion,History,Always]
    int                 SelectionStart; //                                      // Read-write   // [Completion,History,Always] == to SelectionEnd when no selection)
    int                 SelectionEnd;   //                                      // Read-write   // [Completion,History,Always]
} EgImGui_InputTextCallbackData;
    EG_EXPORT EgImGuiContext egImGuiCreateContextVulkan(
        EgWindow window,
        VkInstance instance,
        VkPhysicalDevice physicalDevice,
        VkDevice device,
        unsigned int graphicsQueueFamilyIndex,
        VkQueue graphicsQueue,
        unsigned int minImageCount,
        unsigned int imageCount,
        VkRenderPass renderPass,
        void(*callbackCheckVulkanInitialization)(VkResult)
    );
    EG_EXPORT EgImGuiBool egImGuiInputText(EgImGuiContext context, const char* label, char* buffer, size_t bufferSize, EgImGuiInputTextFlags flags, int(*callback)(EgImGui_InputTextCallbackData));
    EG_EXPORT void egImGui_ScrollbarX(EgImGuiContext context);
    EG_EXPORT void egImGui_ScrollbarY(EgImGuiContext context);
    EG_EXPORT void egImGuiSameLine(EgImGuiContext context);
    EG_EXPORT void egImGuiSameLineWithOffset(EgImGuiContext context, float offsetFromStartX);
    EG_EXPORT void egImGuiSameLineWithOffsetAndSpacing(EgImGuiContext context, float offsetFromStartX, float spacing);
    EG_EXPORT EgImGuiVector2 egImGuiGetContentRegionAvail(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiIsItemHovered(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiIsWindowHovered(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiIsItemClicked(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiSliderFloat(EgImGuiContext context, const char* label, float min, float max, float* value);
    EG_EXPORT float egImGui_GetScrollMaxX(EgImGuiContext context);
    EG_EXPORT float egImGui_GetScrollMaxY(EgImGuiContext context);
    EG_EXPORT float egImGui_GetScrollX(EgImGuiContext context);
    EG_EXPORT float egImGui_GetScrollY(EgImGuiContext context);
    EG_EXPORT void egImGui_SetScrollX(EgImGuiContext context, float value);
    EG_EXPORT void egImGui_SetScrollY(EgImGuiContext context, float value);
    EG_EXPORT void egImGui_SetScrollHereX(EgImGuiContext context, float centerRatio);
    EG_EXPORT void egImGui_SetScrollHereY(EgImGuiContext context, float centerRatio);
    EG_EXPORT void egImGui_SetNextWindowScroll(EgImGuiContext context, EgImGuiVector2 value);
    EG_EXPORT void egImGui_SetFocus(EgImGuiContext context, unsigned int id);
    EG_EXPORT EgImGuiBool egImGui_IsWindowFocused(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGui_IsItemFocused(EgImGuiContext context);
    EG_EXPORT unsigned int egImGui_GetItemId(EgImGuiContext context);
    EG_EXPORT void egImGui_SetWindowFocus(EgImGuiContext context);
    EG_EXPORT void egImGui_SetKeyboardFocusHere(EgImGuiContext context);
    EG_EXPORT void egImGui_BringCurrentWindowToDisplayFront(EgImGuiContext context);
    EG_EXPORT void egImGui_Dummy(EgImGuiContext context, EgImGuiVector2 size);
    /* Style */

    EG_EXPORT EgImGuiVector2 egImGui_GetCellPadding(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetFramePadding(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetWindowPadding(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetItemSpacing(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetItemInnerSpacing(EgImGuiContext context);
    EG_EXPORT void egImGui_SetCellPadding(EgImGuiContext context, EgImGuiVector2 cellPadding);
    EG_EXPORT void egImGui_PushStyleColor_Text(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_Button(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_ButtonHovered(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_ButtonActive(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_WindowBackground(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_ChildBackground(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_PopupBackground(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_FrameBackground(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_FrameBackgroundHovered(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_FrameBackgroundActive(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PushStyleColor_ModalWindowDimBackground(EgImGuiContext context, EgImGuiVector4 color);
    EG_EXPORT void egImGui_PopStyleColor(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetStyleVar_WindowPadding(EgImGuiContext context);
    EG_EXPORT void egImGui_PushStyleVar_WindowPadding(EgImGuiContext context, EgImGuiVector2 padding);
    EG_EXPORT void egImGui_PopStyleVar(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGui_GetStyleVar_WindowBorderSize(EgImGuiContext context);