src/managed/Graphics/UI/Backend/ImGui/Interop/Methods.cs


    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_ScrollbarX(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_ScrollbarY(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSameLine(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSameLineWithOffset(EgImGuiContext context, float offsetFromStartX);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSameLineWithOffsetAndSpacing(EgImGuiContext context, float offsetFromStartX, float spacing);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiGetContentRegionAvail(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiIsItemHovered(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiIsWindowHovered(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiIsItemClicked(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiSliderFloat(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, float min, float max, float* value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGui_GetScrollMaxX(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGui_GetScrollMaxY(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGui_GetScrollX(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern float egImGui_GetScrollY(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetScrollX(EgImGuiContext context, float value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetScrollY(EgImGuiContext context, float value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetScrollHereX(EgImGuiContext context, float centerRatio);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetScrollHereY(EgImGuiContext context, float centerRatio);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetNextWindowScroll(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetFocus(EgImGuiContext context, [NativeTypeName("unsigned int")] uint id);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGui_IsWindowFocused(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGui_IsItemFocused(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egImGui_GetItemId(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetWindowFocus(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetKeyboardFocusHere(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_BringCurrentWindowToDisplayFront(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_Dummy(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetCellPadding(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetFramePadding(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetWindowPadding(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetItemSpacing(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetItemInnerSpacing(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_SetCellPadding(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 cellPadding);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_Text(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_Button(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_ButtonHovered(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_ButtonActive(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_WindowBackground(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_ChildBackground(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_PopupBackground(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_FrameBackground(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_FrameBackgroundHovered(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_FrameBackgroundActive(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleColor_ModalWindowDimBackground(EgImGuiContext context, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 color);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PopStyleColor(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetStyleVar_WindowPadding(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PushStyleVar_WindowPadding(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 padding);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGui_PopStyleVar(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGui_GetStyleVar_WindowBorderSize(EgImGuiContext context);
